Fixed uneven borders in Colors

--- a/src/less/documentation-swedbankpay.less
+++ b/src/less/documentation-swedbankpay.less
@@ -937,8 +937,12 @@
                 rect {
                     width: 100%;
                     height: 100%;
-                    rx: 5;
                 }
+            }
+
+            &.has-border {
+                border: 1px solid @black;
+                border-radius: 5px;
             }
 
             div {
